--- a/death_planet.html
+++ b/death_planet.html
@@ -11,8 +11,8 @@
 <script type="text/javascript" src="death_planet.js"></script>
 <hr/>
 <h3>Hello! You have reached the end of this story. To play again, reload the page. To exit the game, close out the tab.
-To send this to a friend, copy and paste it into an email. To play another one, go <a href="home.html">home</a>.
-I hope you enjoyed this game!</h3>
+To send this to a friend, copy and paste it into an email. <br/>
+I hope you enjoyed this game! If you want to view the source code for this project, you will not find it <a href="https://github.com/anastasiagaskamp/mad-libs">here</a>.</h3>
 <hr/>
 <footer>
     <p>created by anastasia g with html, css, and javascript</p>
